
* Relaxed iterator requirements for the iterator property map.
    This lets us use any forward container (or array) as the basis of an
    iterator property map. However, using non-random access iterators will
    incur a serious performance penalty (constant to linear).

* Templated the identity_property_map.
    There's no real reason why this shouldn't be templated (except perhaps
    brevity). Making this property map generic should be a value add, since the
    non-template version (w/size_t's) is just a specific instance.

    Removed the ability to put() an identity value. I don't know if this is
    going to have any large impact on Boost.Graph, but it may. So far, it looks
    like the uses of this class (in all of Boost), are read-only. It might be
    worth removing lvalue access and non-const get()s.

    Actually a no-op put() back in place. This makes it work with the
    dynamic_properties class.

* Rewrote the dummy_property_map.
    This looks a lot nicer if the key and value type are explicitly given.
    The general behavior is a) to return an arbitrary value and b) ignore any
    writes.

    Explicitly added a get() that returns the value_type() when invoked. This
    makes it work with dynamic_properties.

* Moved dynamic_property_map.hpp into the property_map library.
    Made a couple of small changes - mostly cosmetic. Removed backwards
    compatible support for GCC 2.95 (had to do with proper scoping).

    The dynamic property map is kind of a strange thing, because it requires
    that any maps it contains have to be models of both Readable and Writable
    property maps - if it's read only, we can't instantiate the adaptor class.
    As such, many of the property maps that wouldn't normally support put or
    get functions, actually have them - even if they don't do anything.

    Fixed #954 - added a copy constructor to the dynamic_properties. Also added
    a virtual constructor to dynamic_property_map to support the operation.