@@ -5,8 +5,6 @@
 // accompanying file LICENSE_1_0.txt or copy at
 // http://www.boost.org/LICENSE_1_0.txt)
 
-//  See http://www.boost.org/libs/property_map for documentation.
-
 #ifndef BOOST_PROPERTY_MAP_HPP
 #define BOOST_PROPERTY_MAP_HPP
 
@@ -17,6 +15,7 @@
 #include <boost/property_map/constant_property_map.hpp>
 #include <boost/property_map/identity_property_map.hpp>
 #include <boost/property_map/dummy_property_map.hpp>
+#include <boost/property_map/dynamic_property_map.hpp>
 #include <boost/property_map/concepts.hpp>
 
 #endif
